--- a/0117/build.gradle
+++ b/0117/build.gradle
@@ -13,7 +13,6 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
-    // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly 'org.projectlombok:lombok:1.18.36'
     annotationProcessor 'org.projectlombok:lombok:1.18.36'
 
@@ -29,6 +28,7 @@ dependencies {
     // 테스트 로깅에 사용
     testImplementation 'org.apache.logging.log4j:log4j-core:2.20.0'
 
+    implementation 'org.jsoup:jsoup:1.18.3'
 }
 
 test {
