--- a/WebP/0213/pom.xml
+++ b/WebP/0213/pom.xml
@@ -49,6 +49,12 @@
 			<version>3.0.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.20</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
