--- a/springex/sb7/src/main/resources/application.yml
+++ b/springex/sb7/src/main/resources/application.yml
@@ -2,19 +2,26 @@
 
 #Connection pool
 spring:
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 5MB
+      max-request-size: 50MB
+
   thymeleaf:
     cache: false
+
   datasource:
     url: jdbc:mariadb://localhost:3305/api1db
     driver-class-name: org.mariadb.jdbc.Driver
     username: api1dbuser
     password: api1dbuser
     hikari:
-      maximum-pool-size: 5   # 최대 커넥션 개수
-      minimum-idle: 2         # 최소 유휴 커넥션 개수
-      idle-timeout: 30000     # 커넥션이 유휴 상태로 유지되는 최대 시간 (밀리초)
-      max-lifetime: 1800000   # 커넥션의 최대 생명주기 (밀리초)
-      connection-timeout: 2000 # 커넥션 요청 시 최대 대기 시간 (밀리초)
+      maximum-pool-size: 5   # ?? ??? ??
+      minimum-idle: 2         # ?? ?? ??? ??
+      idle-timeout: 30000     # ???? ?? ??? ???? ?? ?? (???)
+      max-lifetime: 1800000   # ???? ?? ???? (???)
+      connection-timeout: 2000 # ??? ?? ? ?? ?? ?? (???)
 
   #JPA Config
   jpa:
@@ -27,6 +34,29 @@ spring:
   sql:
     init:
       mode: never
+
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: 4fffb071f9a1679275c1df788778d3b6
+            client-secret: MVgTe4Q5CX8XWosFCn8vFPg6zWYsTrZE
+            scope:
+              - account_email
+              - profile_nickname
+              - profile_image
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            client-name: Kakao
+            client-authentication-method: client_secret_post
+
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
 
 #?? ??
 logging:
