--- a/springex/sb7/.gitignore
+++ b/springex/sb7/.gitignore
@@ -1,30 +1,43 @@
-HELP.md
-.gradle
+### Java ###
+*.class
+*.jar
+*.war
+*.ear
+
+### Build ###
+/build/
+/out/
+!**/src/main/**/out/
+/target/
+
+### Gradle ###
+.gradle/
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+gradle-app.setting
+gradlew
+gradlew.bat
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### IntelliJ IDEA ###
-.idea
+### IDEs ###
+# IntelliJ IDEA
+.idea/
 *.iws
 *.iml
 *.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+
+# Eclipse / STS
+.apt_generated/
+.classpath
+.factorypath
+.project
+.settings/
+.springBeans/
+.sts4-cache/
+
+# VS Code
+.vscode/
 
 ### NetBeans ###
 /nbproject/private/
@@ -33,5 +46,20 @@ out/
 /nbdist/
 /.nb-gradle/
 
-### VS Code ###
-.vscode/
+### OS-specific ###
+.DS_Store
+Thumbs.db
+
+### Logs ###
+*.log
+
+### Environment Files ###
+.env
+.env.*
+
+### Local Database / Runtime Files ###
+*.h2.db
+*.mv.db
+
+### Others ###
+/tmp/
