--- a/springex/sb7/src/main/resources/application.yml
+++ b/springex/sb7/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-
-
-#Connection pool
 spring:
   servlet:
     multipart:
@@ -17,13 +14,12 @@ spring:
     username: api1dbuser
     password: api1dbuser
     hikari:
-      maximum-pool-size: 5   # ?? ??? ??
-      minimum-idle: 2         # ?? ?? ??? ??
-      idle-timeout: 30000     # ???? ?? ??? ???? ?? ?? (???)
-      max-lifetime: 1800000   # ???? ?? ???? (???)
-      connection-timeout: 2000 # ??? ?? ? ?? ?? ?? (???)
+      maximum-pool-size: 5
+      minimum-idle: 2
+      idle-timeout: 30000
+      max-lifetime: 1800000
+      connection-timeout: 2000
 
-  #JPA Config
   jpa:
     hibernate:
       ddl-auto: update
@@ -31,6 +27,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
   sql:
     init:
       mode: never
@@ -40,14 +37,14 @@ spring:
       client:
         registration:
           kakao:
-            client-id: 4fffb071f9a1679275c1df788778d3b6
-            client-secret: MVgTe4Q5CX8XWosFCn8vFPg6zWYsTrZE
+            client-id: ${KAKAO_CLIENT_ID}
+            client-secret: ${KAKAO_CLIENT_SECRET}
             scope:
               - account_email
               - profile_nickname
               - profile_image
             authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
             client-name: Kakao
             client-authentication-method: client_secret_post
 
@@ -58,7 +55,6 @@ spring:
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
 
-#?? ??
 logging:
   level:
     org.zerock: INFO
