--- a/reactex/sb2/src/main/resources/application.yml
+++ b/reactex/sb2/src/main/resources/application.yml
@@ -1,25 +1,19 @@
 
-
 #Connection pool
 spring:
-  servlet:
-    multipart:
-      enabled: true
-      max-file-size: 5MB
-      max-request-size: 50MB
-
-
+  thymeleaf:
+    cache: false
   datasource:
-    url: jdbc:mariadb://localhost:3306/api1db
+    url: jdbc:mariadb://localhost:3305/bootdb
     driver-class-name: org.mariadb.jdbc.Driver
-    username: api1dbuser
-    password: api1dbuser
+    username: bootdbuser
+    password: bootdbuser
     hikari:
-      maximum-pool-size: 5   # ?? ??? ??
-      minimum-idle: 2         # ?? ?? ??? ??
-      idle-timeout: 30000     # ???? ?? ??? ???? ?? ?? (???)
-      max-lifetime: 1800000   # ???? ?? ???? (???)
-      connection-timeout: 2000 # ??? ?? ? ?? ?? ?? (???)
+      maximum-pool-size: 5   # 최대 커넥션 개수
+      minimum-idle: 2         # 최소 유휴 커넥션 개수
+      idle-timeout: 30000     # 커넥션이 유휴 상태로 유지되는 최대 시간 (밀리초)
+      max-lifetime: 1800000   # 커넥션의 최대 생명주기 (밀리초)
+      connection-timeout: 2000 # 커넥션 요청 시 최대 대기 시간 (밀리초)
 
   #JPA Config
   jpa:
@@ -33,9 +27,7 @@ spring:
     init:
       mode: never
 
-
-
-#?? ??
+#로그 설정
 logging:
   level:
     org.zerock: INFO
