--- a/reactex/n2/package.json
+++ b/reactex/n2/package.json
@@ -12,7 +12,8 @@
     "jose": "^6.0.10",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
